force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__ApplicantDecision__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicantDecision__c</fullName>
    <label>Applicant Decision</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicantDecision</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>