force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__ApplicationDecision__c.field-meta.xml
<CustomField>
    <fullName>ssot__ApplicationDecision__c</fullName>
    <label>Application Decision</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ApplicationDecision</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>