force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__DecisionAuthorityId__c.field-meta.xml
<CustomField>
    <fullName>ssot__DecisionAuthorityId__c</fullName>
    <label>Decision Authority</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>DecisionAuthorityId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>