force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__PreliminaryApplicationRefId__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreliminaryApplicationRefId__c</fullName>
    <label>Preliminary Application Reference</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreliminaryApplicationRefId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>