force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__rel_1719818359660_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818359660_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationDecision_DecisionAuthorit_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>ApplicationDecision_DecisionAuthorit_rel</relationshipLabel>
    <relationshipName>rel_1719818359660_end</relationshipName>
    <type>Lookup</type>
</CustomField>