force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__rel_1719819536377_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819536377_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ApplicationDecision_PreliminaryAppli_rel</label>
    <referenceTo>ssot__SavedApplicationReference__dlm</referenceTo>
    <relationshipLabel>ApplicationDecision_PreliminaryAppli_rel</relationshipLabel>
    <relationshipName>rel_1719819536377_end</relationshipName>
    <type>Lookup</type>
</CustomField>