force-app/main/default/objects/ssot__ApplicationDecision__dlm/fields/ssot__Score__c.field-meta.xml
<CustomField>
    <fullName>ssot__Score__c</fullName>
    <label>Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Score</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>